# Overleaf

./: .gitignore  LICENSE  Makefile  README.md  README.zh.md  clean.sh  install.sh  pyproject.toml  setup.py
resources/: icon.icns
scripts/: build_icon.py  make_app_icon.py
src/overleaf_client/: __init__.py  __main__.py  app.py
src/overleaf_client/core/: __init__.py  browser.py  config.py  credentials.py  i18n.py  network.py
src/overleaf_client/platform/: __init__.py
src/overleaf_client/ui/: __init__.py  downloads.py  find_bar.py  main_window.py  menu_bar.py  notifications.py  preferences.py  shortcuts.py  styles.py
